Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Anskeen : Resume" />
+    <meta name="description" content="Amanda N. Skeen : Resume" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Anskeen</title>
+    <title>Amanda N. Skeen</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/anskeen/anskeen">View on GitHub</a>
 
-          <h1 id="project_title">Anskeen</h1>
+          <h1 id="project_title">Amanda N. Skeen</h1>
           <h2 id="project_tagline">Resume</h2>
 
             <section id="downloads">
@@ -61,7 +61,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Anskeen maintained by <a href="https://github.com/anskeen">anskeen</a></p>
+        <p class="copyright">Amanda N. Skeen maintained by <a href="https://github.com/anskeen">anskeen</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
