Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 <li>Web and Graphic Design</li>
 <li>Motion Graphics and Video Editing</li>
 <li>Writing for the Web</li>
+<li>Usability Testing</li>
 </ul><h3>Technical Skills</h3>
 
 <ul>
@@ -51,7 +52,48 @@
 <li>Adobe Creative Suite</li>
 <li>Avid DS, Final Cut Pro</li>
 <li>Microsoft Office and other Windows tools</li>
-</ul>
+</ul><h3>Hendrick Automotive UX Apprenticeship</h3>
+
+<ul>
+<li>Paid apprenticeship with experienced UX professionals</li>
+<li>Full product development lifecycle</li>
+<li>Front end web develpment and design</li>
+<li>Usability testing</li>
+</ul><h3>Newspaper Service Company Web Designer &amp; Office Assistant</h3>
+
+<ul>
+<li>Created company website and design input for newspaper websites</li>
+<li>Designed and created promotional ads</li>
+<li>Managed quarterly newspaper story counts and reports</li>
+</ul><h3>CMS-TV 3 Production Assistant</h3>
+
+<ul>
+<li>Directed, produced and assisted with studio operations for live broadcast</li>
+<li>Edited segments for station commercials</li>
+</ul><h3>Freelance</h3>
+
+<h3>Director &amp; Producer's Assistant</h3>
+
+<h4>"_Blood Done sign My Name_" - Feature Film</h4>
+
+<ul>
+<li>2nd Assistant to Jeb Stuart, Director and Mari Stuart, Producer</li>
+<li>Assisted with various activities assigned by director and producer</li>
+</ul><h3>Enventys LMS Video Editor</h3>
+
+<ul>
+<li>Transcribed, logged footage and edited corporate videos</li>
+</ul><h3>TV Show - "_Everyday Edisons" Bouncing Brain Productions_</h3>
+
+<ul>
+<li>Transcribed, logged footage, organized B-roll for television episodes</li>
+<li>Assisted with proofing commercials</li>
+</ul><h3>The Film Foundry Internship</h3>
+
+<ul>
+<li>Labeled Beta tapes for output and proofed color correction for shows and segments</li>
+<li>Assisted Editors on various film clips and proofing upcoming television shows</li>
+</ul><h3>Education and Training</h3>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/anskeen">anskeen</a></p>
