Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <h3>Director &amp; Producer's Assistant</h3>
 
-<h4>"_Blood Done sign My Name_" - Feature Film</h4>
+<h4><i>"Blood Done sign My Name" - Feature Film </i></h4>
 
 <ul>
 <li>2nd Assistant to Jeb Stuart, Director and Mari Stuart, Producer</li>
@@ -83,7 +83,8 @@
 
 <ul>
 <li>Transcribed, logged footage and edited corporate videos</li>
-</ul><h3>TV Show - "_Everyday Edisons" Bouncing Brain Productions_</h3>
+</ul><h3>TV Show - <i>"Everyday Edisons" Bouncing Brain Productions</i>
+</h3>
 
 <ul>
 <li>Transcribed, logged footage, organized B-roll for television episodes</li>
