Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -95,6 +95,17 @@
 <li>Labeled Beta tapes for output and proofed color correction for shows and segments</li>
 <li>Assisted Editors on various film clips and proofing upcoming television shows</li>
 </ul><h3>Education and Training</h3>
+
+<ul>
+<li><p>The Art Institute of Charlotte, Charlotte, NC <br><i>A.A.S <b>Degree</b> in Web Design &amp; Interactive Media-2012</i>
+<br><i>Deans List-December 2009</i></p></li>
+<li><p>Apple Certified Pro, New York, NY <br><i><b>Certification</b> in Final Cut Pro 6, Level one</i></p></li>
+<li><p>Carolina School of Broadcasting, Charlotte, NC <br><i><b>Certification</b> in Television and Radio Broadcast</i></p></li>
+<li><p>Gardner-Webb University, Boiling Springs, NC <br><i>Studied Communications-Radio &amp; Television</i></p></li>
+<li><p>St. Petersburg College, Tarpon Springs, FL <br><i>Studied Communications-Radio &amp; Television</i></p></li>
+<li><p>Lodestone Digital - <i>Photoshop CS3 Fundamentals &amp; Advanced Training</i></p></li>
+<li><p>New York Film Academy - <i>Four Week Study</i></p></li>
+</ul>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/anskeen">anskeen</a></p>
